--- a/btMesh_configuration.json
+++ b/btMesh_configuration.json
@@ -5,7 +5,7 @@
     "PID": "0xf0b0",
     "VID": "0x1234",
     "CRPL": "0x0020",
-    "Features": "0x000f",
+    "Features": "0x000b",
     "Elements": [
       {
         "Name": "Primary Element",
@@ -13,12 +13,12 @@
         "NumS": "3",
         "NumV": "0",
         "SIG Models": [
-          "1001",
-          "Generic OnOff Client",
           "0",
           "Configuration Server",
           "1000",
-          "Generic OnOff Server"]
+          "Generic OnOff Server",
+          "1001",
+          "Generic OnOff Client"]
         ,
         "Vendor Models": [
           ]
