Adding LPN functionality

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ecen5823-btmesh-node</name>
+	<name>course-project-PuneetBansal</name>
 	<comment></comment>
 	<projects>
 	</projects>
